tests/ui/associated-types/issue-64855-2.stderr
error[E0275]: overflow evaluating the requirement `Bar<'a> well-formed`
  --> $DIR/issue-64855-2.rs:5:36
   |
LL | pub struct Bar<'a>(&'a Self) where Self: ;
   |                                    ^^^^
   |
note: required by a bound in `Bar`
  --> $DIR/issue-64855-2.rs:5:36
   |
LL | pub struct Bar<'a>(&'a Self) where Self: ;
   |                                    ^^^^ required by this bound in `Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
